# Lifeguard

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  README.md  pyproject.toml  pyrefly.toml  test.py
.cargo/: config.toml
.github/workflows/: build_binaries.yml  lifeguard.yml  publish_to_pypi.yml
docs/: architecture.md  load_imports_eagerly.md
python/lifeguard_lazy_imports/: __init__.py  __main__.py
resources/: .flake8  Cargo.toml  build.rs
resources/scripts/: merge_overload_effects.py  normalize_stubs.py
resources/src/: lib.rs
resources/stubs/: stubs.md
src/: Cargo.toml  analyzer.rs  bindings.rs  builtins.rs  class.rs  cursor.rs  debug.rs  effects.rs  errors.rs  exports.rs  format.rs  graph.rs  imports.rs  lib.rs  main.rs  manual_override.rs  module_effects.rs  module_info.rs  module_parser.rs  module_safety.rs  output.rs  project.rs  runner.rs  source_analyzer.rs  source_map.rs  stub_analyzer.rs  stubs.rs  test_lib.rs  tracing.rs  traits.rs
src/commands/: analyze.rs  mod.rs  show_effects.rs
src/pyrefly/: README.md  definitions.rs  globals.rs  mod.rs
testdata/sample_project/: has_finalizer.py  importer.py  main.py  safe_module.py  unsafe_module.py  uses_exec.py
tests/: Cargo.toml  assign.rs  attrs.rs  basic.rs  blocks.rs  calls.rs  constructors.rs  decorators.rs  effects.rs  encoding.rs  exceptions.rs  nested_imports.rs  output.rs  param_mutation.rs  port_test_analyzer.rs  port_test_catch_implicit_imports.rs  port_test_finalization.rs  port_test_interpreter.rs  port_test_ownership.rs  star_imports.rs  stubs.rs
(+52 files in other folders)
